View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026808 | Open CASCADE | OCCT:Visualization | public | 2015-10-24 14:31 | 2016-04-20 15:51 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026808: Visualization, TKOpenGl - specify GLSL 120 for point sprites program | ||||
Description | Mesa generates the following error when trying to display point with FFP disabled but in Backward Compatibility OpenGL context:TKOpenGl | Type: Error | ID: 0 | Severity: High | Message: Failed to compile shader object. Compilation log: 0:180(59): error: `gl_PointCoord' undeclared this is due to fact that gl_PointCoord has been added to GLSL only since version 120. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR26808 has been created by kgv. SHA-1: 3d9806bf506fb41b284a28835fd8f6f4e1ef2c2b Detailed log of new commits: Author: kgv Date: Sat Oct 24 14:40:09 2015 +0300 0026808: Visualization, TKOpenGl - specify GLSL 120 for point sprites program |
|
Patch is ready for review. |
|
Branch CR26808 reviewed without remarks, ready for testing. |
|
Branch CR26808 has been updated forcibly by mkv. SHA-1: e45373eb4f5edac1996013fd5a701735193b06a3 |
|
Dear BugMaster, Branch CR26808 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR26808 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e45373eb4f5edac1996013fd5a701735193b06a3 Number of compiler warnings: occt component : Linux: 1 (1 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92936061 / 92329727 [+0.66%] Total CPU difference: 19691.019999999895 / 19731.109999999688 [-0.20%] products component : Total MEMORY difference: 26213349 / 26272952 [-0.23%] Total CPU difference: 7576.489999999991 / 7371.560000000013 [+2.78%] Testing on Windows: occt component : Total MEMORY difference: 92936061 / 92329727 [+0.66%] Total CPU difference: 19691.019999999895 / 19731.109999999688 [-0.20%] products component : Total MEMORY difference: 17156790 / 17161034 [-0.02%] Total CPU difference: 5622.229239699961 / 5657.423065299974 [-0.62%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR26808 is TESTED. |
|
Branch CR26808 has been deleted by kgv. SHA-1: e45373eb4f5edac1996013fd5a701735193b06a3 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-24 14:31 | kgv | New Issue | |
2015-10-24 14:31 | kgv | Assigned To | => kgv |
2015-10-24 14:40 | git | Note Added: 0047416 | |
2015-10-24 14:40 | kgv | Note Added: 0047417 | |
2015-10-24 14:40 | kgv | Assigned To | kgv => san |
2015-10-24 14:40 | kgv | Status | new => resolved |
2015-10-24 14:43 | kgv | Relationship added | child of 0024838 |
2015-10-27 20:48 |
|
Note Added: 0047504 | |
2015-10-27 20:48 |
|
Assigned To | san => bugmaster |
2015-10-27 20:48 |
|
Status | resolved => reviewed |
2015-10-28 13:34 | git | Note Added: 0047528 | |
2015-10-28 13:39 |
|
Assigned To | bugmaster => mkv |
2015-10-29 14:27 |
|
Note Added: 0047600 | |
2015-10-29 14:27 |
|
Assigned To | mkv => bugmaster |
2015-10-29 14:27 |
|
Status | reviewed => tested |
2015-10-29 14:27 |
|
Note Added: 0047601 | |
2015-10-29 14:27 |
|
Note Added: 0047602 | |
2015-10-30 16:00 | bugmaster | Changeset attached | => occt master 15478b1b |
2015-10-30 16:00 | bugmaster | Status | tested => verified |
2015-10-30 16:00 | bugmaster | Resolution | open => fixed |
2016-04-17 14:30 | git | Note Added: 0053184 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |