0026808: Visualization, TKOpenGl - specify GLSL 120 for point sprites program